# things-checklist-builder

./: .gitignore  checklist_builder.py  list_merger.py  pyproject.toml
.github/workflows/: test.yml
tests/: test_checklist_builder.py  test_list_merger.py
tests/lists/: base.txt  car.txt  norway.txt  supp.txt
