[tool.poetry]
name = "Things Checklist Builder"
version = "0.1.0"
description = "Merge multiple template lists together to create a new project in Things 3."
authors = ["Ben Hampson"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pylint = "^2.12.2"
mypy = "^0.931"
black = "^21.12b0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
